--- a/EYESEE/app/src/main/res/layout/activity_main.xml
+++ b/EYESEE/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <Button
-        android:id="@+id/btn"
+        android:id="@+id/tts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Text To Speech"
