--- a/EYESEE/app/src/main/res/layout/activity_main.xml
+++ b/EYESEE/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="76dp"
         android:layout_marginEnd="52dp"
         android:text="Select"
-        android:background="454b4e"
+        android:background="#454b4e"
         app:layout_constraintEnd_toStartOf="@+id/button4"
         app:layout_constraintHorizontal_bias="0.322"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="76dp"
         android:layout_marginEnd="44dp"
-        android:background="454b4e"
+        android:background="#454b4e"
         android:text="Predict"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:background="#e4e4de"
         android:text="Text To Speech"
-        android:backgroundTint="e4e4de"
+        android:backgroundTint="#e4e4de"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
